# calvie

./: .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  test.ics  test_calendar.ics
.github/: codeql-config.yml  copilot-instructions.md
.github/workflows/: codeql.yml  copilot-setup-steps  docker-image.yml  test.yml
templates/: error.html  iframe.html
tests/: test_main.py
